# mycelium

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  test_config.py
backend/: Dockerfile  llm_config.example.json  mycelium-backend-aarch64-apple-darwin.spec  requirements.txt
backend/app/: agent.py  document_processor.py  llm_config.py  main.py  memory_store.py
backend/app/routers/: audio.py  concepts.py  connectors.py  graph_chat.py  health.py  hot_topics.py  mcp.py  skills.py  system.py  threads.py  workspaces.py
backend/app/services/: arxiv_service.py  biorxiv_service.py  concept_service.py  contemplation_service.py  gutendex_service.py  mcp_service.py  mcp_service_draft.py  openlibrary_service.py  reddit_service.py  script_service.py  twitch_service.py  wikipedia_service.py  workspace_tool_service.py
backend/tests/: test_memory.py  test_traversal.py
desktop/: README.md  package-lock.json  package.json
desktop/scripts/: build-backend.sh
desktop/src-tauri/: .gitignore  Cargo.toml  llm_config.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
extension/: background.js  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js  sidepanel.css  sidepanel.html  sidepanel.js
extension/styles/: common.css
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  store.js
frontend/src/components/: AppSettingsModal.jsx  ChatArea.jsx  ConceptsArea.jsx  (+14 more)
(+1 files in other folders)
